# spiceshub

./: alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  cart.py  category.py  guest_cart.py  guest_wishlist_routes.py  health.py  meal.py  order.py  products.py  review.py  sale.py  shipping.py  user.py  wishlist.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: __init__.py  cart.py  health.py  meal.py  order.py  product.py  review.py  sale.py  shipping.py  smart_recommendation.py  user.py  wishlist.py
app/repositories/: category_repository.py  product_repository.py
app/schemas/: __init__.py  cartSchema.py  categorySchema.py  health.py  meal.py  orderSchema.py  productSchema.py  reviewSchema.py  saleSchema.py  shipping.py  userSchema.py  wishlistSchema.py
app/services/: guest_cart.py  guest_wishlist_service.py
frontend/: package-lock.json  package.json  requirements.txt
frontend/src/: App.jsx
frontend/src/admin/: AddCategoryPage.jsx  AddProductPage.jsx  AdminCategories.jsx  AdminHealth.jsx  AdminMeals.jsx  AdminOrderView.jsx  AdminSales.jsx  AdminSidebar.jsx  AnalyticsPage.jsx  CustomersPage.jsx  EditCategoryPage.jsx  EditProductPage.jsx  (+3 more)
migrations/: env.py
migrations/versions/: 04d0859a0ac6_cart_item_again.py  203013a708b1_sales.py  3fe5ffb71a42_first_revision.py  769d93507552_meals_and_health.py  8799ba4c0373_order_schema_change.py  967435abcedb_cart_item.py  ac2c08c53b9a_cart_foreign_keys.py  c08756b558b6_order_schema_change.py  f08c495e73c2_order_schema.py  f8a2b719e82e_short_description.py
(+51 files in other folders)
